--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<linl rel='stylesheet' href='style.css' type='text' />
+<link rel='stylesheet' href='style.css' type='text' />
 
 <header>
 <a>  <img class="logo2"  src="https://i.ibb.co/4f7RYYd/Project-OPUS.png" alt="Project-OPUS" border="04" width="90" height="82"> </a>
