--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+  
 <link rel='stylesheet' href='style.css' type='text' />
 
 <header>
+  <link rel='stylesheet' href='style.css' type='text' />
 <a>  <img class="logo2"  src="https://i.ibb.co/4f7RYYd/Project-OPUS.png" alt="Project-OPUS" border="04" width="90" height="82"> </a>
   
   <a> <img class="logo1" src="https://sohoteam.sserd.org/logo_SSERD.png" width="150" height="80"/> </a>
@@ -31,3 +35,4 @@
   <a>
     <p>&copy; 2020 Team OPUS.</p></a>
  </footer>
+</html>
