--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <header>
   <link  href="style.css" rel="stylesheet" type="text/css">
-<a>  <img class="logo2"  src="https://i.ibb.co/4f7RYYd/Project-OPUS.png" alt="Project-OPUS" border="04" width="90" height="82"> </a>
+<a>  <img class="logo2"  src="https://i.ibb.co/4f7RYYd/Project-OPUS.png" alt="Project-OPUS" border="0" width="100" height="100"> </a>
   
   <a> <img class="logo1" src="https://sohoteam.sserd.org/logo_SSERD.png" width="150" height="80"/> </a>
    
-  <div class="logo">
-    <a> <p> <h1>OPUS</h1> <h2> Of a ARMOR Paradise</h2></p> </a>
-  </div>
+
+  <div id="logo">  <p> <h>OPUS</h> Of A<b>r</b>mor Paradise </p> </div>
+  
   <nav>
     <ul>
       <li><a href="#" class="selected"> <input type="button" value="Home" onclick="home()"></a></li>
@@ -32,4 +32,3 @@
   <a>
     <p>&copy; 2020 Team OPUS.</p></a>
  </footer>
-</html>
