--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
+  
   <link  href="style.css" rel="stylesheet" type="text/css">
+  
 <a>  <img class="logo2"  src="https://i.ibb.co/4f7RYYd/Project-OPUS.png" alt="Project-OPUS" border="0" width="100" height="100"> </a>
   
   <a> <img class="logo1" src="https://sohoteam.sserd.org/logo_SSERD.png" width="150" height="80"/> </a>
    
-
   <div id="logo">  <p> <h>OPUS</h> Of A<b>r</b>mor Paradise </p> </div>
   
   <nav>
@@ -32,3 +33,4 @@
   <a>
     <p>&copy; 2020 Team OPUS.</p></a>
  </footer>
+</html>
