--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   
   <nav>
     <ul>
-      <li><a href="#" class="selected"> <input type="button" value="Home" onclick="home()"></a></li>
+      <li><a href="https://tpk369.github.io/opus/" class="selected"> <input type="button" value="Home" ></a></li>
       
-      <li><a href="#"><input type="button" value="About" onclick="About()"></a></li>
+      <li><a href="https://tpk369.github.io/opus/"><input type="button" value="About" ></a></li>
       
-      <li><a href="#"><input type="button" value="Project" onclick="Project()"></a></li>
-      <li><a href="#"><input type="button" value="Gallery" ></a></li>
+      <li><a href="https://tpk369.github.io/opus/"><input type="button" value="Project" ></a></li>
+      <li><a href="https://tpk369.github.io/opus/"><input type="button" value="Gallery" ></a></li>
     </ul>
   </nav>
 </header>
