--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   
   <link  href="style.css" rel="stylesheet" type="text/css">
   
-<a>  <img class="logo2"  src="https://i.ibb.co/4f7RYYd/Project-OPUS.png" alt="Project-OPUS" border="0" width="100" height="100"> </a>
+<a>  <img class="logo2"  src="https://i.ibb.co/3pR5WmB/Project-OPUS.png" alt="Project-OPUS" border="0" width="120" height="75"> </a>
   
   <a> <img class="logo1" src="https://sohoteam.sserd.org/logo_SSERD.png" width="150" height="80"/> </a>
    
-  <div id="logo">  <p> <h>OPUS</h> Of A<b>r</b>mor Paradise </p> </div>
+ <a> <div id="logo">  <p> <h>OPUS</h> Of A<b>r</b>mor Paradise </p> </div> </a>
   
   <nav>
     <ul>
-      <li><a href="https://tpk369.github.io/opus/" class="selected"> <input type="button" value="Home" ></a></li>
+       <li><a href="https://tpk369.github.io/opus/" class="selected"> <input type="button" value="Home" ></a></li>
       
       <li><a href="https://tpk369.github.io/opus/"><input type="button" value="About" ></a></li>
       
@@ -28,7 +28,8 @@
 
 <footer>
  
-  <p>Follow us on</p> <a href="https://twitter.com/"> <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/twitter-wrap.png" alt="Twitter Logo" class="social-icon"> </a>
+  <p>Follow us on</p> 
+  <a href="https://twitter.com/"> <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/twitter-wrap.png" alt="Twitter Logo" class="social-icon"> </a>
     <a href="https://facebook.com/"> <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
   <a>
     <p>&copy; 2020 Team OPUS.</p></a>
