--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <header>
   
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="style.css">
   
 <a>  <img class="logo2"  src="https://i.ibb.co/3pR5WmB/Project-OPUS.png" alt="Project-OPUS" border="0" width="120" height="75"> </a>
   
