--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <header>
   
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./style.css">
 <a>  <img class="logo2"  src="https://i.ibb.co/3pR5WmB/Project-OPUS.png" alt="Project-OPUS" border="0" width="120" height="75"> </a>
   <a> <img class="logo1" src="https://sohoteam.sserd.org/logo_SSERD.png" width="150" height="80"/> </a>
    
